text editor fixed

--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -8,6 +8,7 @@
     <script src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
     
     <link rel="stylesheet" href = "{% static 'blog.css' %}">
+    {{ form.media }}
 </head>
 <body class="blog_body">
  
