submit button fixed

--- a/main/templates/upload.html
+++ b/main/templates/upload.html
@@ -2,9 +2,18 @@
 {% block title %}Post upload{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
-  {{form.as_p}}
-
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" style="width: 100px;
+            background-color: #1D3557;
+            color: #ffffff;
+            border: none;
+            cursor: pointer;
+            padding: 10px;
+            font-size: 18px;">Upload</button>
+    </form>
 {% else %}
-<h1>Login Please</h1>
+    <h1>Login Please</h1>
 {% endif %}
 {% endblock %}
