Few pages added

--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -28,7 +28,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="/profile">Profile</a></li>
+                <li><a href="/">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
                 <li><a href="/">Home</a></li>
@@ -54,7 +54,7 @@
             <div class="categories">
                 <h2>Categories</h2>
                 <div class="card">
-                    <p>Cyber Security</p>
+                    <p><a href="/cyber_posts">Cyber Security</a> </p>
                 </div>
                 <div class="card">
                     <p>Graphics Design</p>
