--- a/main/static/style.css
+++ b/main/static/style.css
@@ -144,16 +144,18 @@
     line-height: 1.3;
 }
 .card-content .btn{
-    display: inline-block;
-    padding: 8px ;
-    background-color: white;
-    text-decoration: none;
-    border-radius: 4px;
+    display: inline-block; 
+    padding: 8px 16px; 
+    background-color: white;  
+    text-decoration: none;  
+    border-radius: 4px;  
     margin-top: 16px;
+    color: #1D3557;  
+    width: auto;  
+    min-width: 100px;  
+    text-align: center; 
+    border: 1px solid #1D3557; 
     height: 30px;
-    color: #1D3557;
-    width: 90px;
-    text-align: center;
 }
 #profile-card{
     background-color: #C14E77;
