--- a/main/templates/cyber.html
+++ b/main/templates/cyber.html
@@ -3,8 +3,8 @@
 {% block content %}
 {% if user.is_authenticated %}
   <div style="display: flex; flex-direction: column; gap: 20px; align-items: center;">
-   {% for post in all_posts %}
-     
+   {% for post in cyber_posts %}
+     {% if post.category == 'Cyber Security' %}
      
        <div class="card" style="height:80px;">
        <div class="card-info" >
@@ -17,7 +17,7 @@
        </div>
       </div>
      
-     
+     {% endif %}
    {% endfor %}
   </div>
 {% endif %}
