--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -28,7 +28,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="/">Profile</a></li>
+                <li><a href="{% url 'user_edit' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
                 <li><a href="/">Home</a></li>
