--- a/main/templates/edit_post.html
+++ b/main/templates/edit_post.html
@@ -2,7 +2,7 @@
 {% block title %}Post upload{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" style="width: 100px;
