--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -24,12 +24,12 @@
         {% if user.is_authenticated %}
             <li><a href="/">Home</a></li>
             <li><a href="/blog">Blog</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/">Contact</a></li>
             <li><a href="{% url 'user_edit' %}">Profile</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
             <li><a href="/">Home</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/">Contact</a></li>
             <li><a href="{% url 'login' %}">Login</a></li>
             <li><a href="{% url 'register' %}">Register</a></li>
         {% endif %}
